Fix breadcrumb contrast on support book

--- a/web/themes/custom/citizen_dart/components/04-units/nodes/support-book/_support-book.scss
+++ b/web/themes/custom/citizen_dart/components/04-units/nodes/support-book/_support-book.scss
@@ -18,6 +18,10 @@
         color: $navy;
         a{
           @include lineLink;
+          color: $link;
+          &:hover,&:focus {
+            color: $black;
+          }
         }
       }
     }
